# dayboard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.deploy.yml  docker-compose.platform.yml  docker-compose.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202607090001_initial_schema.py  202607090002_agent_runs.py  202607100001_provider_usage_records.py  202607100002_scheduling_write_idempotency.py  202607100003_command_idempotency_keys.py  202607100004_calendar_cancellation.py  202607100005_conversations.py  202607100006_conversation_states.py  202607100007_single_active_thread_run.py  202607110001_multi_create_operations.py  202607110002_voice_transcripts.py  202607110003_task_updates.py  202607110004_calendar_operation_keys.py  202607110005_provider_usage_exactly_once.py  202607110006_accounts_and_sessions.py  202607110007_reminder_delivery_outbox.py  202607140001_initial_schema.py  202607150001_complete_calendar_entries.py  202607160001_password_reset_tokens.py  202607200001_anytime_calendar_entries.py  202607210001_reminder_inbox_state.py  202607230001_schedule_row_versions.py  202607230002_primary_conversations.py  202607230003_versioned_interactions.py  202607230004_versioned_presentations.py  202607230005_thread_lifecycle.py  (+2 more)
apps/api/evals/: agent_eval.json
apps/api/scripts/: agent_acceptance.py  agent_eval.py  export_openapi.py
apps/api/tests/: conftest.py  fake_runtime.py  test_account_recovery_persistence.py  test_account_recovery_unit_of_work.py  test_agent_acceptance_script.py  test_agent_boundary.py  test_agent_eval.py  test_agent_middleware.py  test_agent_observability.py  test_agent_presentation.py  test_agent_prompts.py  test_agent_runs.py  test_agent_tools.py  test_aliyun_speech.py  test_auth_api.py  test_checkpointer.py  test_cloudflare_speech.py  test_command_dispatcher.py  test_commands_api.py  test_config.py  test_conversation_presentations.py  test_conversations.py  test_provider_budget.py  test_provider_usage.py  test_provider_usage_settlement.py  test_provider_usage_unit_of_work.py  test_reminder_unit_of_work.py  test_reminders.py  test_run_composition.py  test_schedule_queries_api.py  test_scheduling_tools.py  test_scheduling_unit_of_work.py  test_schema_ownership.py  test_speech_integration.py  test_timezones.py  test_voice_api.py  test_voice_persistence.py  test_voice_unit_of_work.py  test_worker_commands.py
(+224 files in other folders)
