[project]
name = "dayboard-api"
version = "0.1.0"
description = "Dayboard FastAPI service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "fastapi[standard]>=0.116.0,<1.0.0",
    "north",
    "pydantic-settings>=2.10.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[tool.uv.sources]
north = { path = "../../../deerflow-lite/packages/harness", editable = true }

[project.scripts]
dayboard-api = "dayboard.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.build-backend]
module-name = "dayboard"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
