[project]
name = "dayboard-api"
version = "0.1.0"
description = "Dayboard FastAPI service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-application-platform",
    "alembic>=1.16.0,<2.0.0",
    "arq>=0.28.0,<0.29.0",
    "asyncpg>=0.30.0,<1.0.0",
    "av>=18.0.0,<19.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "fastapi[standard]>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "isodate>=0.7.0,<1.0.0",
    "north[postgres]",
    "pwdlib[argon2]>=0.3.0,<1.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "redis>=5.0.0,<7.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "structlog>=25.0.0,<26.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[tool.uv.sources]
agent-application-platform = { path = "../../packages/agent-platform", editable = true }
north = { git = "https://github.com/Notryag/north-agent.git", rev = "9c1f1b7a87c0cf295e1efa2417f7ccf8fff3fcd2", subdirectory = "packages/harness" }

[project.scripts]
dayboard-api = "dayboard.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.uv.build-backend]
module-name = "dayboard"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
